# zhilian-os

./: .commitlintrc.json  .editorconfig  .env.example  .env.prod.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_INTEGRATION_GUIDE.md  AGENT_INTEGRATION_REPORT.md  API_ADAPTERS_INTEGRATION_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX.md  COLLAB.md  COMPLETE_PROJECT_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_REPORT.md  DEVELOPMENT.md  DEVELOPMENT_SESSION_2026-02-20.md  DEVELOPMENT_SESSION_2026-02-20_COMPLETE.md  DEVELOPMENT_SESSION_2026-02-20_PART2.md  ENTERPRISE_INTEGRATION_REPORT.md  EXTERNAL_SYSTEMS_VALIDATION_REPORT.md  FEATURE_COMPLETION_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY.md  FRONTEND_TEST_CHECKLIST.md  MOBILE_FEATURES.md  MULTI_CHANNEL_NOTIFICATION_GUIDE.md  Makefile  NEURAL_SYSTEM_COMPLETE.md  NEURAL_SYSTEM_DEPLOYMENT.md  NEURAL_SYSTEM_FULL_TEST_REPORT.md  NEURAL_SYSTEM_IMPLEMENTATION.md  NEURAL_SYSTEM_QUICKSTART.md  NEURAL_SYSTEM_TEST_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_TEST_COMPARISON.md  (+55 more)
.claude/: settings.json
.github/: CODEOWNERS
docs/: 2026年1月经营分析报告.md  API对接状态_2026-03-20.md  EXTERNAL_SYSTEMS_CONFIG.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  OAUTH_SETUP.md  SHOKZ_PERMISSIONS.md  TUNXIANG_OS_DESIGN_SYSTEM.md  YIDING_INTEGRATION.md  agent-interface-specification.md  agent-refactoring-test-report.md  agent-system-prompts.md  api-changelog.md  api-gateway-integration.md  api-guide.md  architecture.md  authentication-guide.md  business-workflow-demo.md  celery-integration.md  chain-restaurant-finance-tax-treasury-solution.md  chain-restaurant-finance-tax-treasury-technical-solution.md  codex-claude-collaboration-protocol.md  credential-migration-guide.md  customer360-service.md  data-persistence-progress.md  deepseek-integration.md  deployment-guide.md  deployment-report.md  detailed-role-analysis.md  development-plan-v6-remediation.md  development-summary.md  enterprise-integration-support-matrix.md  fct-closed-loop-detection.md  fct-completeness-for-finance-department.md  fct-industry-benchmark-and-roadmap.md  fct-standalone-deployment.md  fct-voucher-rules-and-accounting-standards.md  fct-workbench-integration.md  frontend-completion-summary.md  frontend-dashboard-integration.md  (+40 more)
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  neo4j-statefulset.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  secrets.yaml  web-deployment.yaml  web-service.yaml
scripts/: check_all_apis.py  check_config.py  check_pinzhi_api.py  check_store_token_apis.py  create_admin.py  deploy.sh  deploy_tunxiang.sh  deploy_update.sh  detect_pinzhi_changzaiyiqi.py  diag_adapter.py  fetch_pinzhi_monthly_data.py  fetch_real_data_all_brands.py  fix-server.sh  gate1-manual-ops.sh  ontology-consolidation.py  probe_pinzhi.py  probe_pinzhi_signed.py  probe_pinzhi_v2.py  setup-git-secrets.sh  test_inside.py  test_integrations.sh  test_phase0.py  verify_pinzhi_data.py
ssl/: README.md
tasks/: api-contracts.md  claude-codex-collaboration.md  collab-sync.md  generate_xuji_bom.py  generate_xuji_pptx.py  lessons.md  todo.md  xuji-poc-presentation.md  徐记海鲜_BOM数据表_POC.xlsx  智链OS开发任务.md  智链经营助手_徐记海鲜_POC汇报.pptx
(+2488 files in other folders)
